fixed align

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -8,6 +8,8 @@
 }
 header{
     text-align: center;
+    align-items: center;
+    
 }
 body {
 background-color: darksalmon;
